--- a/src/app/mainnav/mainnav.component.html
+++ b/src/app/mainnav/mainnav.component.html
@@ -8,19 +8,19 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about" (click)="onSelect('1')">Home</a>
+              <a class="nav-link js-scroll-trigger" href="#about" [routerLink]="['/home']">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services" (click)="onSelect('2')">El Complejo</a>
+              <a class="nav-link js-scroll-trigger" href="#services" [routerLink]="['/complejo']">El Complejo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio" (click)="onSelect('3')">Ubicacion Y Contacto</a>
+              <a class="nav-link js-scroll-trigger" href="#portfolio" [routerLink]="['/ubicacion']">Ubicacion Y Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio" (click)="onSelect('4')">Eventos</a>
+              <a class="nav-link js-scroll-trigger" href="#portfolio" [routerLink]="['/eventos']">Eventos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact" (click)="onSelect('5')">Reservar</a>
+              <a class="nav-link js-scroll-trigger" href="#contact" [routerLink]="['/reservar']">Reservar</a>
             </li>
           </ul>
         </div>
