--- a/src/styles.css
+++ b/src/styles.css
@@ -349,3 +349,22 @@ ngx-carousel button[NgxCarouselPrev] {
 ngx-carousel button[NgxCarouselNext] {
   right: -4em;
 }
+
+.jumbotron{
+  width: 69em;
+  height: 34em;
+  background-color: rgba(1,1,1,0.7);
+  border-radius: 2.3rem;
+  border: 1px solid;
+  padding: 10px;
+  box-shadow: 5px 10px 18px darkslategrey;
+}
+
+.tcomplejo{
+  margin-top: 10em;
+}
+
+.masthead{
+  width: 100%;
+  height: 100%;
+}
