--- a/src/app/complejo/complejo.component.html
+++ b/src/app/complejo/complejo.component.html
@@ -2,10 +2,15 @@
   <div class="container my-auto">
     <div class="tcomplejo">
       <div class="jumbotron">
-          <h1 class="display-4">Hello, world!</h1>
-          <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+          <h1 class="display-4">EL COMPLEJO</h1>
+          <p class="lead">Ubicado en Félix García Nº 769 y 823 en la ciudad de Antofagasta, el Complejo Deportivo y Eventos Lautaro Castro cuenta con 8 mil m2 de infraestructura.
+            Con cinco canchas de fútbol de césped artificial de última generación de procedencia holandesa certificado con dos estrellas FIFA, de las cuales cuentan con iluminación LED para la práctica deportiva nocturna, este complejo deportivo ofrece las máximas comodidades.
+            Siendo nuestra política de servicio rigurosa, Complejo Deportivo y Eventos Lautaro Castro cuenta con personas capacitadas que actúan como monitores, acompañando a la gente en sus actividades, para que puedan sentirse seguros y disfrutar del agradable ambiente deportivo.
+            Además contamos con un centro de Eventos que cuenta con una piscina de grandes proporciones, áreas verdes, quincho, bar, baños, cocina y un salón de capacidad de 300 personas con escenario.
+            Visítenos y venga a disfrutar de nuestras instalaciones.</p>
           <hr class="my-4">
-          <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+          <h1 class="display-4">REGLAMENTO INTERNO</h1>
+          <p class="lead">Nuestra principal función es el beneficio de las personas que gustan de hacer deporte en forma sana, tranquila y segura, además de poder ofrecerles un mejor servicio e instalaciones.</p>
         </div>
       </div>
         </div>
