'ubicacion' component was added and all the previous design issues were fixed

--- a/src/app/complejo/complejo.component.html
+++ b/src/app/complejo/complejo.component.html
@@ -1,17 +1,22 @@
-<header class="masthead text-center text-white d-flex">
-  <div class="container my-auto">
-    <div class="tcomplejo">
-      <div class="jumbotron">
-          <h1 class="display-4">EL COMPLEJO</h1>
-          <p class="lead">Ubicado en Félix García Nº 769 y 823 en la ciudad de Antofagasta, el Complejo Deportivo y Eventos Lautaro Castro cuenta con 8 mil m2 de infraestructura.
-            Con cinco canchas de fútbol de césped artificial de última generación de procedencia holandesa certificado con dos estrellas FIFA, de las cuales cuentan con iluminación LED para la práctica deportiva nocturna, este complejo deportivo ofrece las máximas comodidades.
-            Siendo nuestra política de servicio rigurosa, Complejo Deportivo y Eventos Lautaro Castro cuenta con personas capacitadas que actúan como monitores, acompañando a la gente en sus actividades, para que puedan sentirse seguros y disfrutar del agradable ambiente deportivo.
-            Además contamos con un centro de Eventos que cuenta con una piscina de grandes proporciones, áreas verdes, quincho, bar, baños, cocina y un salón de capacidad de 300 personas con escenario.
-            Visítenos y venga a disfrutar de nuestras instalaciones.</p>
-          <hr class="my-4">
-          <h1 class="display-4">REGLAMENTO INTERNO</h1>
-          <p class="lead">Nuestra principal función es el beneficio de las personas que gustan de hacer deporte en forma sana, tranquila y segura, además de poder ofrecerles un mejor servicio e instalaciones.</p>
+<div class="container-fluid">
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-3" style="color:white">EL COMPLEJO</h1>
+          <p class="lead" style="color:white">Ubicado en Félix García Nº 769 y 823 en la ciudad de Antofagasta, el Complejo Deportivo y Eventos Lautaro Castro
+              cuenta con 8 mil m2 de infraestructura. Con cinco canchas de fútbol de césped artificial de última generación
+              de procedencia holandesa certificado con dos estrellas FIFA, de las cuales cuentan con iluminación LED para la
+              práctica deportiva nocturna, este complejo deportivo ofrece las máximas comodidades. Siendo nuestra política
+              de servicio rigurosa, Complejo Deportivo y Eventos Lautaro Castro cuenta con personas capacitadas que actúan
+              como monitores, acompañando a la gente en sus actividades, para que puedan sentirse seguros y disfrutar del agradable
+              ambiente deportivo. Además contamos con un centro de Eventos que cuenta con una piscina de grandes proporciones,
+              áreas verdes, quincho, bar, baños, cocina y un salón de capacidad de 300 personas con escenario. Visítenos y
+              venga a disfrutar de nuestras instalaciones.</p>
         </div>
+        <hr/>
+        <div class="container">
+            <h1 class="display-3" style="color:white">REGLAMENTO INTERNO</h1>
+            <p class="lead" style="color:white">Nuestra principal función es el beneficio de las personas que gustan de hacer deporte en forma sana, tranquila
+                y segura, además de poder ofrecerles un mejor servicio e instalaciones.</p>
+          </div>
       </div>
-        </div>
-        </header>
+</div>
