--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -32,10 +32,11 @@
           <!--Third column-->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
             <h6 class="title mb-4 font-bold">Contacto</h6>
-            <p><i class="fa fa-home mr-3"></i> Chile</p>
-            <p><i class="fa fa-envelope mr-3"></i> info@example.com</p>
-            <p><i class="fa fa-phone mr-3"></i> + 01 234 567 88</p>
-            <p><i class="fa fa-print mr-3"></i> + 01 234 567 89</p>
+            <p><i class="fa fa-phone mr-3"></i> 552618802</p>
+            <p><i class="fa fa-envelope mr-3"></i>contacto@complejolautaro.cl</p>
+            <p><i class="fa fa-envelope mr-3"></i>contacto@complejolautaro.cl</p>
+            <p><i class="fa fa-home mr-3"></i>F&eacute;lix Garc&iacute;a n° 823 Casa Matriz - Antofagasta</p>
+            <p><i class="fa fa-home mr-3"></i>F&eacute;lix Garc&iacute;a n° 769 Sucursal - Antofagasta</p>
         </div>
           <!--/.Third column-->
 
