Initial Design added

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,20 +1,15 @@
-<div class="container">
-<form>
+<div class="container-fluid">
+  <div class="row bcklgn">
+<form class="loginfrm">
   <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    <label for="exampleInputEmail1" style="color:white">Correo:</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese su correo">
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <label for="exampleInputPassword1" style="color:white">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Ingrese su password">
   </div>
-  <div class="form-check">
-    <label class="form-check-label">
-      <input type="checkbox" class="form-check-input">
-      Check me out
-    </label>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Ingresar</button>
 </form>
+</div>
 </div>
