--- a/src/app/mainnav/mainnav.component.html
+++ b/src/app/mainnav/mainnav.component.html
@@ -22,6 +22,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact" [routerLink]="['/reservar']">Reservar</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#login" [routerLink]="['/login']">Ingresar</a>
+              </li>
           </ul>
         </div>
       </div>
