--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-  <app-mainnav></app-mainnav>
-  <router-outlet></router-outlet>
-  <app-footer></app-footer>
+  <app-mainnav *ngIf="currentT"></app-mainnav>
+  <router-outlet *ngIf="currentT"></router-outlet>
+  <app-footer *ngIf="currentT"></app-footer>
+  <router-outlet *ngIf="!currentT"></router-outlet>
