--- a/src/styles.css
+++ b/src/styles.css
@@ -927,3 +927,8 @@ mwl-demo-utils-calendar-header{
   margin-top: 8em;
   background-color: rgba(1,1,1,0.5);
 }
+
+.bckrgt{
+  margin-top: 8em;
+  background-color: rgba(1,1,1,0.5);
+}
