Fixes for create new user and also the user info component was added

--- a/src/app/admindashboard/admindashboard.component.html
+++ b/src/app/admindashboard/admindashboard.component.html
@@ -1,14 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-  <a class="navbar-brand">Bienvenido</a>
+  <a class="navbar-brand">Bienvenido {{UserM.firstname}}!</a>
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
       <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-        <a class="nav-link">
+        <a class="nav-link" [routerLink]="['/admindb']">
           <i class="fa fa-fw fa-dashboard"></i>
           <span class="nav-link-text">Dashboard</span>
+        </a>
+      </li>
+
+      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
+        <a class="nav-link" [routerLink]="['/userdata']">
+          <i class="fa fa-fw fa-user-circle"></i>
+          <span class="nav-link-text">Mi Usuario</span>
         </a>
       </li>
       <!-- <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
