--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -40,6 +40,10 @@
       <input type="text" class="form-control" formControlName="age" id="exampleInputEdad" aria-describedby="emailHelp" placeholder="Ingrese su edad" required>
     </div>
     <div class="form-group">
+      <label for="exampleInputPhone" style="color:white">Telefono:</label>
+      <input type="text" class="form-control" formControlName="phone" id="exampleInputPhone" aria-describedby="emailHelp" placeholder="Ingrese su telefono" required>
+    </div>
+    <div class="form-group">
       <label for="exampleFormControlSelect1" style="color:white">Genero:</label>
       <select class="form-control" formControlName="gender" id="exampleFormControlSelect1">
         <option>Masculino</option>
